# MDeditor

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  test.sh  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: build.yml  close-issues.yml  release.yml
docs/: GIT_CONVENTION.md
scripts/: install.sh  uninstall.sh
src/: App.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/editor/: MarkdownEditor.module.css  MarkdownEditor.tsx
src/components/layout/: AppLayout.module.css  AppLayout.tsx  StatusBar.tsx  TitleBar.tsx
src/components/preview/: MarkdownPreview.module.css  MarkdownPreview.tsx
src/components/sidebar/: FileTree.module.css  FileTree.tsx  FileTreeItem.tsx
src/components/translation/: OllamaSetupGuide.module.css  OllamaSetupGuide.tsx  TranslateButton.tsx
src/hooks/: useFileSystem.ts  useKeyboardShortcuts.ts  useMarkdownParser.ts  useScrollSync.ts
src/i18n/: en.json  ko.json
src/lib/: markdown.ts  translation.ts
src/lib/__tests__/: markdown.test.ts  translation.test.ts
src/stores/: editorStore.ts
src/stores/__tests__/: editorStore.test.ts
